--- a/www/js/components/login/login.html
+++ b/www/js/components/login/login.html
@@ -18,7 +18,7 @@
 
 <ons-page>
       <ons-toolbar>
-        <div class="center">Log In</div>
+        <div class="center">MUHC Doctor App</div>
       </ons-toolbar>
 
       <div class="login-form">
